--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -79,7 +79,7 @@
         </div>
         <div class="row gy-4">
           <div class="col-12 col-lg-2">
-            <nav class="navmenu-mini">
+            <nav class="navmenu-custom">
               <ul class="nav flex-column align-items-start">
                 <li class="nav-item">
                   <a class="nav-link active" href="#bookings">Bookings</a>
