--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -77,7 +77,7 @@
         </div>
         <div class="row gy-4">
           <div class="col-12 col-lg-2">
-            <nav>
+            <nav class="navmenu-custom">
               <ul class="nav flex-column align-items-start">
                 <li class="nav-item">
                   <a class="nav-link" href="#booking_list">My Bookings</a>
