--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -58,7 +58,7 @@
             </ul>
           </li> -->
           <li><a href="/#contact">Contact</a></li>
-          <li><a href="/users/bookings_page">My Bookings</a></li>
+          <li><a class="active" href="/users/admin_page">Admin Dashboard</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
