--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1006,7 +1006,12 @@
                     <span class="sr-only"></span>
                   </div>
                 </div>
-                <a href="/users/register_page">Register new account here.</a>
+                <div>
+                  <a href="/users/register_page"><i class="bi bi-pencil-square text-danger"></i>   Register new account here </a>
+                </div>
+                <div class="row mt-4">
+                  <a href="/users/forgot_password"><i class="bi bi-question-octagon-fill text-danger"></i>   Forgotten Password?.</a>
+                </div>
               </form>
               <p id="message"></p>
             </div>
