--- a/views/user_reset.ejs
+++ b/views/user_reset.ejs
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manage Bookings</title>
+  <title>Reset Password</title>
 
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="/assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -78,59 +78,39 @@
         <div class="row gy-4">
 
           <div class="col-12 col-lg-8">
-            <p><strong>Register an account with us.</strong></p>
-            <form id="registerForm" method="POST">
-              <div class="col-lg-8">
-                <label class="mb-2" for="name">Name</label>
-                <input class="form-control" type="text" id="name" name="name" required>
-              </div>
-              <div class="col-lg-8">
-                <label class="mb-2" for="tel_no">Phone Number</label>
-                <input class="form-control" type="tel" id="tel_no" name="tel_no" required>
-              </div>
+            <% if (Object.keys(user).length === 0) { %>
+            <p><strong>Enter your email address to get verification code.</strong></p>
+            <form id="emailVerifyForm" method="POST">
               <div class="col-lg-8">
                 <label class="mb-2" for="email">Email</label>
                 <input class="form-control" type="email" id="email" name="email" required>
               </div>
-              <div class="col-lg-8">
-                <label class="mb-2" for="reg_username">Username</label>
-                <input class="form-control" type="text" id="reg_username" name="username" required>
+              <button class="book-a-table-login" type="submit">Reset Password</button>
+              <div id="reg-spinner" class="spinner-grow spinner-grow-sm text-danger mx-3" role="status">
+                <span class="sr-only"></span>
               </div>
-              <div class="col-lg-8">
-                <label class="mb-2" for="reg_password">Password</label>
-                <input class="form-control" type="password" id="reg_password" name="password" required>
+              <p id="verifyMessage"></p>
+            </form>
+            <% } else { %>
+            <p class="my-4"><strong>Enter new password for user <%= user.NAME %> </strong></p>
+            <form id="resetPasswordForm" method="POST">
+              <input type="hidden" class="form-control" id="userID" name="userID" value="<%= user.ID_USER %>" required>
+              <div class="col-lg-8 mb-3">
+                <label for="newPassword" class="form-label">New Password</label>
+                <input type="password" class="form-control" id="newPassword" name="newPassword" required>
               </div>
-              <button class="book-a-table-login" type="submit">Register</button>
+              <div class="col-lg-8 mb-3">
+                <label for="confirmPassword" class="form-label">Confirm New Password</label>
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+              </div>
+              <button class="book-a-table-login" type="submit">Submit</button>
               <div id="reg-spinner" class="spinner-grow spinner-grow-sm text-danger mx-3" role="status">
                 <span class="sr-only"></span>
               </div>
               <p id="registerMessage"></p>
             </form>
-          </div>
-          <div class="col-12 col-lg-4">
-            <p><strong>Already have an account? You may login here.</strong></p>
-            <div class="login-container">
-              <form id="loginForm">
-                <div class="col-lg-6 form-group">
-                  <label class="mb-2" for="username">Username:</label>
-                  <input type="text" id="username" name="username" class="form-control" required>
-                </div>
-                <div class="col-lg-6 form-group">
-                  <label class="mb-2" for="password">Password:</label>
-                  <input type="password" id="password" name="password" class="form-control" required>
-                </div>
-                <div>
-                  <button class="book-a-table-login" type="submit">Login</button>
-                  <div id="login-spinner" class="spinner-grow spinner-grow-sm text-danger mx-3" role="status">
-                    <span class="sr-only"></span>
-                  </div>
-                  <div>
-                    <a href="/users/forgot_password">Forgotten Password?.</a>
-                  </div>
-                </div>
-              </form>
-              <p id="message"></p>
-            </div>
+            <% } %>
+
           </div>
         </div>
       </div>
@@ -212,7 +192,7 @@
       }
     })
   </script>
-  <script src="js/formActions.js" type="module"></script>
+  <script src="/js/formActions.js" type="module"></script>
 
 </body>
 
