--- a/views/index.ejs
+++ b/views/index.ejs
@@ -381,7 +381,7 @@
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-7.jpeg" class="glightbox"><img src="assets/img/menu/menu-item-7.jpeg" class="menu-img img-fluid" alt=""></a>
-                <h4>Kuey Tiow Celup</h4>
+                <h4>Cendawan Tepung Celup</h4>
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
@@ -994,11 +994,11 @@
               <form id="loginForm">
                 <div class="col-lg-6 form-group">
                   <label class="mb-2" for="username">Username:</label>
-                  <input type="text" id="username" name="username" class="form-control" required>
+                  <input type="text" id="username" name="username" class="form-control"  maxlength="50" required>
                 </div>
                 <div class="col-lg-6 form-group">
                   <label class="mb-2" for="password">Password:</label>
-                  <input type="password" id="password" name="password" class="form-control" required>
+                  <input type="password" id="password" name="password" class="form-control"  maxlength="50" required>
                 </div>
                 <div>
                   <button class="book-a-table-login" type="submit">Login</button>
@@ -1010,7 +1010,7 @@
                   <a href="/users/register_page"><i class="bi bi-pencil-square text-danger"></i>   Register new account here </a>
                 </div>
                 <div class="row mt-4">
-                  <a href="/users/forgot_password"><i class="bi bi-question-octagon-fill text-danger"></i>   Forgotten Password?.</a>
+                  <a href="/users/forgot_password"><i class="bi bi-question-octagon-fill text-danger"></i>   Forgotten Password? </a>
                 </div>
               </form>
               <p id="message"></p>
@@ -1044,13 +1044,13 @@
               <form class="php-email-form" id="guestBookForm">
                 <div class="row gy-4">
                   <div class="col-lg-4 col-md-6">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"  maxlength="50" required="">
                   </div>
                   <div class="col-lg-4 col-md-6">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"  maxlength="50" required="">
                   </div>
                   <div class="col-lg-4 col-md-6">
-                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" required="">
+                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone"  maxlength="20"  required="">
                   </div>
                   <div class="col-lg-4 col-md-6">
                     <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
@@ -1063,7 +1063,7 @@
                   </div>
                 </div>
                 <div class="form-group mt-3">
-                  <textarea class="form-control" name="remarks" rows="5" id="remarks" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="remarks" rows="5" id="remarks"  maxlength="100" placeholder="Message"></textarea>
                 </div>
                 <div class="mb-3">
                   <div id="booking_loading" class="loading">Loading</div>
