--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -119,7 +119,7 @@
                       <td><%= index + 1 %></td>
                       <td><%= booking.BOOKING_NAME %></td>
                       <td class=".col-width-medium"><%= booking.BOOKING_REMARKS %></td>
-                      <td><%= new Date(booking.BOOKING_DATE).toDateString() %></td>
+                      <td><%= booking.BOOKING_DATE %></td>
                       <td><%= booking.BOOKING_TEL %></td>
                       <td><%= booking.BOOKING_EMAIL %></td>
                       <td><%= booking.BOOKING_PAX %></td>
