--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1324,7 +1324,7 @@
             <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
             <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
             <a href="https://www.instagram.com/seripadi_decabin/" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://wa.me/+60173244866" class="linkedin"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
