further home changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,13 +133,15 @@
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                Located in the historical city of Malacca...
+                Located in the historical city of Malacca...We specialize in authentic Thai-style Halal cuisine, offering a delightful blend of flavors and spices that will tantalize your taste buds. Whether you're planning an small meal or a large gathering, our welcoming atmosphere and exquisite dishes make Seri Padi De Cabin the perfect choice for any occasion.
+              </p>
+              <p class="fst-italic">
+                Join us for an unforgettable dining experience that celebrates the rich culinary traditions of Thailand.
               </p>
               <ul>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Muslim ownership and operation.</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Perfect ambience and family-friendly.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Special requests for special occassions
-                    welcome.</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Requests for special occassions are welcomed.</span></li>
               </ul>
               <p>
                 We are open daily from 6:00 p.m. to 2:00 a.m.
@@ -994,11 +996,11 @@
               <form id="loginForm">
                 <div class="col-lg-6 form-group">
                   <label class="mb-2" for="username">Username:</label>
-                  <input type="text" id="username" name="username" class="form-control"  maxlength="50" required>
+                  <input type="text" id="username" name="username" class="form-control" maxlength="50" required>
                 </div>
                 <div class="col-lg-6 form-group">
                   <label class="mb-2" for="password">Password:</label>
-                  <input type="password" id="password" name="password" class="form-control"  maxlength="50" required>
+                  <input type="password" id="password" name="password" class="form-control" maxlength="50" required>
                 </div>
                 <div>
                   <button class="book-a-table-login" type="submit">Login</button>
@@ -1007,10 +1009,10 @@
                   </div>
                 </div>
                 <div>
-                  <a href="/users/register_page"><i class="bi bi-pencil-square text-danger"></i>   Register new account here </a>
+                  <a href="/users/register_page"><i class="bi bi-pencil-square text-danger"></i> Register new account here </a>
                 </div>
                 <div class="row mt-4">
-                  <a href="/users/forgot_password"><i class="bi bi-question-octagon-fill text-danger"></i>   Forgotten Password? </a>
+                  <a href="/users/forgot_password"><i class="bi bi-question-octagon-fill text-danger"></i> Forgotten Password? </a>
                 </div>
               </form>
               <p id="message"></p>
@@ -1044,13 +1046,13 @@
               <form class="php-email-form" id="guestBookForm">
                 <div class="row gy-4">
                   <div class="col-lg-4 col-md-6">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"  maxlength="50" required="">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" maxlength="50" required="">
                   </div>
                   <div class="col-lg-4 col-md-6">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"  maxlength="50" required="">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" maxlength="50" required="">
                   </div>
                   <div class="col-lg-4 col-md-6">
-                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone"  maxlength="20"  required="">
+                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" maxlength="20" required="">
                   </div>
                   <div class="col-lg-4 col-md-6">
                     <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
@@ -1063,7 +1065,7 @@
                   </div>
                 </div>
                 <div class="form-group mt-3">
-                  <textarea class="form-control" name="remarks" rows="5" id="remarks"  maxlength="100" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="remarks" rows="5" id="remarks" maxlength="100" placeholder="Message"></textarea>
                 </div>
                 <div class="mb-3">
                   <div id="booking_loading" class="loading">Loading</div>
