--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1249,7 +1249,7 @@
 
         </div>
 
-        <form id="contactForm" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
+        <form id="contactForm" method="post" class="php-email-form">
           <div class="row gy-4">
 
             <div class="col-md-6">
@@ -1282,7 +1282,7 @@
       </div>
 
     </section><!-- /Contact Section -->
-
+    
   </main>
 
   <footer id="footer" class="footer">
