post-testing rectifications #1 - password & admin access

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1927,3 +1927,11 @@ section,
     color: var(--nav-dropdown-hover-color);
   }
 }
+
+.font-8px {
+  font-size: 8px;
+}
+
+.font-12px {
+  font-size: 12px;
+}
