fixes on user and session

--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -232,6 +232,9 @@
                   <input class="form-control" type="email" id="email" name="email" value="<%= user.EMAIL %>" required>
                 </div>
                 <button class="book-a-table-login my-4" type="submit">Save</button>
+                <div id="profile-spinner" class="spinner-grow spinner-grow-sm text-danger mx-3" role="status" style="display:none;">
+                  <span class="sr-only"></span>
+                </div>
                 <p id="registerMessage"></p>
               </form>
             </div>
